--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,69 @@
-body {
+body {  
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #ebb3dd;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+h1 {
+  text-align: center;
+  margin-top: 10px;
+  width: 100%;
+  margin: 0;  
+}
+
+.app-container {
+  text-align: center;
+}
+
+.table-container {
+  margin-top: 20px;
+  max-height: 400px; /* Set a maximum height for the table container */
+  overflow-y: auto; /* Add vertical scrollbars if the content overflows */
+}
+
+.upload-container {
+  margin-top: 10px;
+  text-align: center; /* Center the content horizontally */
+}
+
+.upload-container input {
+  display: inline-block; /* Ensure the input is displayed as a block */
+}
+
+.styled-table {
+  width: 30%;
+  border-collapse: collapse;
+  margin: 0 auto;
+}
+
+.styled-table th {
+  border: 1px solid #26300b;
+  padding: 8px;
+  text-align: center; /* Center the text in table cells */
+}
+
+.styled-table td {
+  border: 1px solid #26300b;
+  padding: 8px;
+  text-align: center;  
+}
+
+.image-cell img {
+  width: 100%;
+  height: 100%;
+  max-width: 150px;
+  max-height: 150px;
+  object-fit: cover;
+}
+
+.watermark {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  color: rgba(0, 0, 0, 0.5); /* Adjust the color and opacity of the watermark */
+  font-size: 12px;
 }
